log/build_2025-09-14_23-08-22/lidar_turtlebot_activity/stderr.log
  File "/home/vboxuser/ros2_ws/install/lidar_turtlebot_activity/lib/python3.10/site-packages/lidar_turtlebot_activity/turtlebot_avoidance.py", line 68
    if __name__ = '__main__':
       ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Maybe you meant '==' or ':=' instead of '='?

